--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
     <string name="toast_error_password_mismatch">Passowrds not matching</string>
     <string name="toast_error_login_failed">Login failed</string>
     <string name="toast_error_invalid_username_password">Invalid username or password</string>
+    <string name="action_logout">Logout</string>
+    <string name="send_button_label">Send</string>
+    <string name="title_activity_home">HomeActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
