--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="create_account">Create Account</string>
     <string name="log_in">Log In</string>
     <string name="username">Username</string>
+    <string name="type_message">Type a message</string>
 </resources>
