--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="log_in">Log In</string>
     <string name="username">Username</string>
     <string name="type_message">Type a message</string>
+    <string name="password">Password</string>
 </resources>
