--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="type_message">Type a message</string>
     <string name="password">Password</string>
     <string name="toast_login_wrong_credentials">Account does not exist. Invalid email or password</string>
+    <string name="bot">Bot</string>
+    <string name="user">User</string>
 </resources>
